--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.1",
     "next": "13.1.6",
+    "nextjs-obfuscator": "^1.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
