--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-responsive": "^9.0.2",
     "typescript": "4.9.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "husky": "^8.0.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.3",
-    "tailwindcss": "^3.2.4",
-    "husky": "^8.0.0"
+    "tailwindcss": "^3.2.4"
   }
 }
