--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.1",
+    "i18next": "^22.4.13",
+    "i18next-browser-languagedetector": "^7.0.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.2.0",
     "react-icons": "^4.7.1",
     "react-responsive": "^9.0.2",
     "typescript": "4.9.5"
