--- a/package.json
+++ b/package.json
@@ -29,21 +29,11 @@
     "styled-components": "^5.3.9",
     "typescript": "4.9.5"
   },
-  "babelMacros": {
-    "twin": {
-      "preset": "styled-components"
-    }
-  },
   "devDependencies": {
-    "@babel/plugin-syntax-typescript": "^7.21.4",
-    "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.13",
-    "babel-loader": "^9.1.2",
-    "babel-plugin-macros": "^3.1.0",
     "husky": "^8.0.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
-    "tailwindcss": "^3.3.1",
-    "twin.macro": "^3.3.0"
+    "tailwindcss": "^3.3.1"
   }
 }
