--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.13",
     "husky": "^8.0.0",
     "postcss": "^8.4.21",
