--- a/package.json
+++ b/package.json
@@ -20,16 +20,22 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.1",
+    "i18next": "^22.4.15",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.0",
+    "locomotive-scroll": "^4.1.4",
     "next": "13.1.6",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.2.0",
     "react-icons": "^4.7.1",
     "react-responsive": "^9.0.2",
     "styled-components": "^5.3.9",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/locomotive-scroll": "^4.1.0",
     "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.13",
     "husky": "^8.0.0",
