--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
   },
   "dependencies": {
     "@babel/core": "^7.21.4",
-    "@next/font": "^13.1.6",
+    "@next/font": "^13.4.4",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.4",
-    "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
+    "eslint": "^8.41.0",
+    "eslint-config-next": "^13.4.4",
     "framer-motion": "^9.0.1",
-    "next": "13.1.6",
+    "next": "^13.4.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.8.0",
     "react-responsive": "^9.0.2",
     "styled-components": "^5.3.9",
-    "typescript": "~4.5.2"
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
@@ -35,6 +35,6 @@
     "husky": "^8.0.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.2"
   }
 }
