packages upgraded, turbo cli added

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
+    "devt": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -31,9 +32,9 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.14",
     "husky": "^8.0.0",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.24",
     "prettier": "^2.8.4",
     "tailwindcss": "^3.3.2"
   }
