--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@next/font": "^13.4.4",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.4",
     "eslint": "^8.41.0",
     "eslint-config-next": "^13.4.4",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.6",
     "framer-motion": "^9.0.1",
     "next": "^13.4.4",
     "next-themes": "^0.2.1",
@@ -31,11 +32,13 @@
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@types/react": "^18.2.7",
     "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.14",
     "husky": "^8.0.0",
     "postcss": "^8.4.24",
     "prettier": "^2.8.4",
+    "sass": "^1.62.1",
     "tailwindcss": "^3.3.2"
   }
 }
