--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.21.4",
+    "@motionone/utils": "^10.15.1",
     "@next/font": "^13.4.4",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.11.18",
@@ -26,7 +27,7 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.9.0",
     "react-responsive": "^9.0.2",
     "styled-components": "^5.3.9",
     "typescript": "^5.0.4"
